@startuml

' Version: 1.0.3
' Last modified: 2026-06-17
' User references Neighborhood by id only
' Added shared DomainId interface
' User id is generated by persistence

skinparam classAttributeIconSize 0

interface DomainId {
  + value(): Long
  + validate(name: String)
}

class User <<aggregate root>> {
  - id: UserId
  - birthDate: LocalDateTime
  - passwordHash: String
  - isAdmin: Bool
  - neighborhoodId: NeighborhoodId
  --
  + updateProfile(user: User)
}

class City <<aggregate root>> {
  - id: CityId
  - name: String
}

class Neighborhood <<entity>> {
  - id: NeighborhoodId
  - name: String
}

class UserId <<value object>>
class CityId <<value object>>
class NeighborhoodId <<value object>>

class Biography <<value object>> {
  - info: String
  --
  - validate(info: String): bool
}

class FullName <<value object>> {
  - name: String
  - fullname: String
  --
  - validate(name: String): bool
}

class Mail <<value object>> {
  - mail: String
  --
  - validate(mail: String): bool
}

User "1" --> "1" Biography : bio
User "1" --> "1" FullName : fullName
User "1" --> "1" Mail : mail
User "*" --> "1" NeighborhoodId : neighborhoodId
City "1" --> "*" Neighborhood : neighborhoods
UserId ..|> DomainId
CityId ..|> DomainId
NeighborhoodId ..|> DomainId

@enduml
